--- a/style/css/all.css
+++ b/style/css/all.css
@@ -184,9 +184,11 @@
 
 .scroll_menu_box li > img {
   position: absolute;
-  width: 100%;
   top: 0;
+  right: auto;
   bottom: 0;
+  left: auto;
+  width: 100%;
   margin: auto;
 }
 
@@ -196,11 +198,13 @@
 
 .scroll_menu_box span {
   position: absolute;
+  top: 0;
+  right: auto;
+  bottom: auto;
+  left: 0;
   display: block;
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
   background: rgba(0, 0, 0, 0.7);
 }
 
@@ -226,11 +230,12 @@
   height: 40px;
   position: absolute;
   top: 0;
+  right: auto;
   bottom: 0;
-  margin: auto 0;
-  cursor: pointer;
   left: 20px;
+  margin: auto 0;
   background: url("../../images/icon_prev.svg") no-repeat center/cover;
+  cursor: pointer;
 }
 
 .next_btn {
@@ -239,11 +244,12 @@
   height: 40px;
   position: absolute;
   top: 0;
-  bottom: 0;
-  margin: auto 0;
-  cursor: pointer;
   right: 20px;
+  bottom: 0;
+  left: auto;
+  margin: auto 0;
   background: url("../../images/icon_next.svg") no-repeat center/cover;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
@@ -395,6 +401,9 @@
   content: '';
   position: absolute;
   top: 0;
+  right: auto;
+  bottom: auto;
+  left: auto;
   width: 100%;
   height: 4px;
   background: #000;
@@ -417,7 +426,10 @@
 .header .menu_btn::after {
   content: '';
   position: absolute;
+  top: auto;
+  right: auto;
   bottom: 0;
+  left: auto;
   width: 100%;
   height: 4px;
   background: #000;
@@ -464,10 +476,13 @@
 .header .menu li::after {
   content: '';
   position: absolute;
+  top: 73%;
+  right: auto;
+  bottom: auto;
+  left: auto;
   width: 50%;
   height: 1px;
   background: #EF7E00;
-  top: 73%;
   -webkit-transition-duration: .3s;
           transition-duration: .3s;
 }
@@ -512,10 +527,12 @@
     height: calc(100vh - 70px);
     max-width: 375px;
     position: absolute;
+    top: 70px;
+    right: -100%;
+    bottom: auto;
+    left: auto;
     background: #EF7E00;
     z-index: 2;
-    right: -100%;
-    top: 70px;
     -webkit-transition-duration: .3s;
             transition-duration: .3s;
     overflow-x: hidden;
@@ -744,8 +761,11 @@
 .date_block {
   position: absolute;
   width: 100%;
-  left: 0;
+  position: absolute;
+  top: auto;
+  right: auto;
   bottom: 0;
+  left: 0;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(12.5%, rgba(255, 255, 255, 0.72)), color-stop(34.69%, rgba(255, 255, 255, 0.9)));
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.72) 12.5%, rgba(255, 255, 255, 0.9) 34.69%);
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
